commit message 7/23 2 mappers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.mail.username=2570945863@qq.com
 spring.mail.password=jibjimzebtqwdhia
 spring.mail.host=smtp.qq.com
 spring.mail.properties.mail.smtp.ssl.enable=true
+
+logging.level.com.iotek.hrmgr.service=DEBUG
+logging.level.com.iotek.hrmgr.mapper=DEBUG
