--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
             <version>1.1.8</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>4.1.6</version>
+        </dependency>
+
     </dependencies>
 
     <build>
