--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,22 @@
     <name>hrmgr</name>
     <description>Demo project for Spring Boot</description>
 
+    <modules>
+        <module>shirotest</module>
+    </modules>
+
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.0.3.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.3.5.RELEASE</version>
     </parent>
 
     <properties>
@@ -51,6 +62,10 @@
             <version>1.3.2</version>
         </dependency>
 
+
+
+
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -74,6 +89,22 @@
             <artifactId>pagehelper</artifactId>
             <version>4.1.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+
 
     </dependencies>
 
@@ -99,10 +130,6 @@
                         <artifactId>mysql-connector-java</artifactId>
                         <version>5.1.34</version>
                     </dependency>
-                    <dependency>
-                        <groupId>gradle.plugin.com.arenagod.gradle</groupId>
-                        <artifactId>mybatis-generator-plugin</artifactId>
-                    </dependency>
 
                 </dependencies>
                 <configuration>
@@ -121,6 +148,5 @@
 
         </plugins>
     </build>
-
 
 </project>
