commit message 7/26 搜发搜够的

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.mail.password=wyplpxwxbujtebic
 spring.mail.host=smtp.qq.com
 spring.mail.properties.mail.smtp.ssl.enable=true
 
-logging.level.com.iotek.hrmgr.service=DEBUG
+logging.level.com.iotek.hrmgr.com.iotek.hrmgr.service=DEBUG
 logging.level.com.iotek.hrmgr.mapper=DEBUG
