--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,6 @@
     <name>hrmgr</name>
     <description>Demo project for Spring Boot</description>
 
-    <modules>
-        <module>shirotest</module>
-    </modules>
 
 
     <parent>
@@ -23,11 +20,6 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.3.5.RELEASE</version>
-    </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -36,6 +28,7 @@
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
@@ -61,9 +54,6 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>1.3.2</version>
         </dependency>
-
-
-
 
 
         <dependency>
@@ -104,6 +94,16 @@
             <artifactId>shiro-spring</artifactId>
             <version>RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-core</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-core</artifactId>
+            <version>RELEASE</version>
+        </dependency>
 
 
     </dependencies>
@@ -124,6 +124,7 @@
                     <dependency>
                         <groupId>org.mybatis.generator</groupId>
                         <artifactId>mybatis-generator-core</artifactId>
+                        <version>1.3.5</version>
                     </dependency>
                     <dependency>
                         <groupId>mysql</groupId>
