--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     active: dev
   datasource:
     username: root
-    password: root
+    password: 13611808583
     url: jdbc:mysql:///db_hrmgr
     driver-class-name: com.mysql.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
